# test_chess_board

./: .clang-format  CMakeLists.txt  README.md
scripts/: build.sh  run.sh  test.sh
sources/: board.cpp  board.hpp  main.cpp  main.hpp  rook.hpp
